--- a/00. Band Website Project/index.html
+++ b/00. Band Website Project/index.html
@@ -10,7 +10,7 @@
 <!-- MEANINGLESS ELEMENTS -> DIV and SPAN | DIV is a block that next pline surrounding the elaments, 
     while a span is in a same line of the surrounding elements -->
 <body>
-    <!-- Comprises all the HEADER -->
+    <!-- Comprises all the HEADER  Changes-->
     <header class="main-header"> 
         <nav class="nav main-nav">
             <!-- ul -> dotted list -->
